fix text align

--- a/static/landing.css
+++ b/static/landing.css
@@ -106,6 +106,7 @@ li {
 .tileHeader {
     font-family: 'Spline Sans', sans-serif;
     font-size: 40px;
+    text-align: center;
 }
 
 .tileText {
